# linux-socks

./: .gitignore
cmake/: CMakeLists.txt  build.sh  clean.sh  create_project_dir.sh
cmake/cmake_auto_generated/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: main.c
