cmake_minimum_required(VERSION 3.28.3)

project(sockets)
# enable_testing()

set(CMAKE_BUILD_TYPE)
# message(CMAKE_CURRENT_SOURCE_DIR:  ${CMAKE_CURRENT_SOURCE_DIR})
cmake_path(GET CMAKE_CURRENT_SOURCE_DIR PARENT_PATH CMAKE_CURRENT_SOURCE_DIR)
set(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
message(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

message(CMAKE_CURRENT_BINARY_DIR:  ${CMAKE_CURRENT_BINARY_DIR})
cmake_path(GET CMAKE_CURRENT_BINARY_DIR PARENT_PATH CMAKE_CURRENT_BINARY_DIR)
cmake_path(GET CMAKE_CURRENT_BINARY_DIR PARENT_PATH CMAKE_CURRENT_BINARY_DIR)
set(CMAKE_CURRENT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
message(CMAKE_CURRENT_BINARY_DIR:  ${CMAKE_CURRENT_BINARY_DIR})

if ("${CMAKE_BUILD_TYPE}" STREQUAL "")
	message("BUILD FAILED! Parameter CMAKE_BUILD_TYPE not specified")
	return()
endif()
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}-${CMAKE_GENERATOR_PLATFORM}-lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}-${CMAKE_GENERATOR_PLATFORM}-lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}-${CMAKE_GENERATOR_PLATFORM}-bin)
# CMAKE_GENERATOR_PLATFORM
# CMAKE_OPERATING

message(CMAKE_ARCHIVE_OUTPUT_DIRECTORY: ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
message(CMAKE_LIBRARY_OUTPUT_DIRECTORY: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
message(CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(PROJECT_SOURCE_FILES 
	main.c
)

block(PROPAGATE PROJECT_SOURCE_FILES)
	set(templist)
	foreach(file ${PROJECT_SOURCE_FILES})
	list(APPEND  templist ${CMAKE_CURRENT_SOURCE_DIR}/${file})
	endforeach()
	set(PROJECT_SOURCE_FILES ${templist})
endblock()

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
	message("building debug")
	
elseif("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
	message("building release")

endif()

add_executable(sockets ${PROJECT_SOURCE_FILES} )

set_target_properties( sockets
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}"
)
